feat: start to use cleverness when querying cabinets
